<resources>
    <string name="app_name">Dokkan Seller</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="products">
        <item>Embroidery Art</item>
        <item>Crochet</item>
        <item>Wedding</item>
        <item>Accessories</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Sign_in">Sign in</string>
    <string name="Email">Email</string>
    <string name="password">Password</string>
    <string name="forget_Password">Forget Password ?</string>
    <string name="Dont_have_an_account">Dont have an account?</string>
    <string name="Register_here"> Register here</string>
    <string name="Forget_Password">Forget Password!!</string>
    <string name="Don_Worry_we_just_need_your">Do not Worry we just need your</string>
    <string name="registared_email_address_and_its_done"> registared email address and its done</string>
    <string name="made_with_love">Made With Love</string>
    <string name="shop_name">Shop Name</string>
    <string name="location_name">location</string>
    <string name="reviews">Reviews</string>
    <string name="view_more">View more</string>
    <string name="about">About</string>
    <string name="sign_out">Sign Out</string>
    <string name="instgram">Instgram</string>
    <string name="policies">Policies</string>
    <string name="item_name">Item Name</string>
    <string name="load_more">Load more</string>
    <string name="Add_Item">Add Item</string>
    <string name="Welcome">Welcome,</string>
    <string name="user_name">Asmaa Salah</string>
    <string name="in_your_secound_home">in your second home</string>
    <string name="Your_Category">Your Category</string>
    <string name="item_full_name">item full name</string>
    <string name="location_e_g_cairo_egypt">Location (e.g : Cairo , Egypt)</string>
    <string name="phone">Phone</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="next">NEXT</string>
    <string name="done">DONE</string>
    <string name="bio">Bio</string>
    <string name="select_your_categories">Select Your Categories</string>
    <string name="reset_password">Reset password</string>


    <string name="add_product">Add Product</string>
    <string name="post">Post</string>
    <string name="materials">Materials:</string>
    <string name="size">Size</string>
    <string name="quick_description">Quick Description..</string>
    <string name="_00_00">$ 00.00</string>
    <string name="update">update</string>
    <string name="_0_0">0.0 $</string>
    <string name="edit">edit</string>
    <string name="coper_wire_we_use_a_good_material">coper wire, we use a good material</string>
    <string name="hight_30cm">hight~30cm</string>
    <string name="cooper_wire_decor_that_has_ashape_of_crystal_is_totally">Cooper Wire decor that has ashape of Crystal is totally</string>
    <string name="description">Description</string>
    <string name="weading_candle_holder">Weading Candle holder</string>
    <string name="_19">$19</string>
    <string name="israa_nour">israa nour</string>
    <string name="_6_days_ago">6 Days ago</string>
    <string name="shop_not_found">Shop not found, please register with another mail</string>
    <string name="somethingWentWrong">Something went wrong</string>
</resources>

