<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pagebkg"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center">


    <EditText
        android:id="@+id/locationId"
        android:layout_width="@dimen/width_220"
        android:layout_height="@dimen/height_40"
        android:background="@drawable/edittex"
        android:hint="@string/location_e_g_cairo_egypt"
        android:inputType="text"
        android:paddingLeft="@dimen/paddind_10"
        android:textColorHint="@color/color_white"
        android:textColor="@color/color_white"
        android:textSize="@dimen/text_size_13"
        android:layout_marginTop="@dimen/margin_70"/>

    <EditText
        android:id="@+id/phoneId"
        android:layout_width="@dimen/width_220"
        android:layout_height="@dimen/height_40"
        android:layout_marginTop="@dimen/margin_17"
        android:background="@drawable/edittex"
        android:hint="@string/phone"
        android:inputType="phone"
        android:paddingLeft="@dimen/paddind_10"
        android:textColorHint="@color/color_white"
        android:textColor="@color/color_white"
        android:textSize="@dimen/text_size_13" />

    <EditText
        android:id="@+id/facebookId"
        android:layout_width="@dimen/width_220"
        android:layout_height="@dimen/height_40"
        android:layout_marginTop="@dimen/margin_17"
        android:background="@drawable/edittex"
        android:hint="@string/facebook"
        android:inputType="text"
        android:paddingLeft="@dimen/paddind_10"
        android:textColorHint="@color/color_white"
        android:textColor="@color/color_white"
        android:textSize="13sp"
        />

    <EditText
        android:id="@+id/instgramId"
        android:layout_width="@dimen/width_220"
        android:layout_height="@dimen/height_40"
        android:layout_marginTop="@dimen/margin_17"
        android:background="@drawable/edittex"
        android:hint="@string/instagram"
        android:inputType="text"
        android:paddingLeft="@dimen/paddind_10"
        android:textColorHint="@color/color_white"
        android:textColor="@color/color_white"
        android:textSize="@dimen/text_size_13"/>



    <Button
        android:id="@+id/nxtbtn"
        android:layout_width="@dimen/width_120"
        android:layout_height="@dimen/height_35"
        android:layout_marginTop="@dimen/margin_35"
        android:background="@drawable/button2"
        android:textSize="@dimen/text_size_15"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/color_white"
        android:textStyle="bold"/>




</LinearLayout>