<?xml version="1.0" encoding="utf-8"?>

<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"

    android:orientation="vertical"

    android:layout_width="match_parent"

    android:layout_height="match_parent"

    android:background="@color/colorAccent"



    >





    <LinearLayout

        android:layout_width="match_parent"

        android:layout_height="@dimen/layout_dimens_0"

        android:layout_weight="1"

        android:layout_marginTop="@dimen/layout_dimens_50"

        android:orientation="vertical"

        android:layout_gravity="center"

        >



        <TextView

            android:layout_width="match_parent"

            android:layout_height="wrap_content"

            android:text="@string/Forget_Password"

            android:gravity="center"

            android:layout_marginBottom="@dimen/layout_dimens_30"

            android:textColor="@color/color_ecddcd"

            android:textSize="@dimen/text_size_30"

            />

        <TextView

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:layout_gravity="center_horizontal"

            android:text="@string/Don_Worry_we_just_need_your"

            android:textSize="@dimen/text_size_16"

            android:textColor="@color/color_e6e4e4"
            />

        <TextView
            android:layout_width="@dimen/layout_dimens_300"

            android:layout_height="wrap_content"

            android:layout_gravity="center_horizontal"

            android:text="@string/registared_email_address_and_its_done"

            android:paddingStart="@dimen/layout_dimens_20"

            android:textColor="@color/color_e6e4e4"

            android:textSize="@dimen/text_size_15"
            />






    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"

        android:layout_height="@dimen/layout_dimens_0"

        android:layout_weight="3"

        android:orientation="vertical"

        android:layout_gravity="center"

        android:layout_marginRight="@dimen/layout_dimens_40"

        android:layout_marginLeft="@dimen/layout_dimens_40"

        android:layout_marginTop="@dimen/layout_dimens_40"

        >




        <EditText
            android:id="@+id/rest_email"

            android:layout_width="match_parent"

            android:layout_height="wrap_content"

            android:inputType="textEmailAddress"

            android:padding="@dimen/layout_dimens_15"

            android:layout_margin="@dimen/layout_dimens_10"

            android:textSize="@dimen/text_size_15"

            android:drawableLeft="@drawable/ic_email"

            android:drawablePadding="@dimen/layout_dimens_2"

            android:hint="enter your registered email"

            android:textColorHint="@color/color_white"

            android:backgroundTint="@color/color_e6e4e4"
            />



        <Button

            android:layout_width="wrap_content"

            android:layout_height="@dimen/layout_dimens_40"

            android:id="@+id/reset_btn"

            android:layout_gravity="center"

            android:background="@drawable/button"

            android:text="Reset password"

            android:textColor="@color/colorPrimary"

            android:backgroundTint="@color/color_EEE1D2"

            android:textSize="@dimen/text_size_16"

            android:textAllCaps="false"

            android:fontFamily="sans-serif-medium"

            android:layout_centerHorizontal="true"

            android:paddingRight="@dimen/layout_dimens_30"

            android:paddingLeft="@dimen/layout_dimens_30"

            android:layout_marginTop="@dimen/layout_dimens_40"

            />


    </LinearLayout>

</LinearLayout>